# somo

./: .gitignore  README.md  pyproject.toml
configs/: tokenizer_fineweb_8k.yaml  tokenizer_mix_32k.yaml  tokenizer_tiny.yaml  train_fineweb_10bt_100m.yaml  train_hf_fineweb.yaml  train_jsonl_fineweb.yaml  train_mixed_100m.yaml  train_mixed_300m.yaml  train_mixed_300m_gqa.yaml  train_sft_fineweb_10bt_100m.yaml  train_tiny.yaml
scripts/: convert_sft_to_chatml.py  extend_pretrain_samples.py  tokenize_dataset.py  tokenize_sft_dataset.py  train_tokenizer.py
src/somo/: data.py  generate.py  model.py  pyproject.toml  train.py
src/somo/tokenizers/: bpe.py  char.py  tokenizer.py
src/somo/util/: my_functional.py
tokenizers/: fineweb-8k-bpe.json  somo-32k-bpe.json  tiny-bpe.json
