[project]
name = "somo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "httpx[socks]>=0.28.1",
    "numpy>=2.5.0",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "tokenizers>=0.23.1",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
